# Research-Analyst

./: .dockerignore  AGENTS.md  Agent.py  Dockerfile.agent  Dockerfile.server  Dockerfile.ui  README.md  api.py  chainlit_app.py  docker-compose.yml  evaluation.py  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
db/init/: 01_chainlit_schema.sql
