[project]
name = "research-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.28.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "langfuse",
    "openinference-instrumentation-openai-agents",
    "openai-agents[sqlalchemy]>=0.17.7",
    "httpx>=0.28.1",
    "tavily-python>=0.7.26",
    "fastapi[standard]>=0.138.1",
    "chainlit>=2.11.1",
    "asyncpg",
    "aiosqlite>=0.22.1",
]
